--- a/Practice-one-email.html
+++ b/Practice-one-email.html
@@ -1,27 +1,32 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="Practice-one-styles.css">
-  </head>
-  <body>
-<div class="row h-100">
 
-<!-- Navbar Item -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="Practice-one-styles.css">
+</head>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body>
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Giga Mail</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item"> 
+    <div class="row h-100">
+       
+      <!-- Navbar Item -->
+
+      <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary"> -->
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Giga Mail</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" 
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <!-- <li class="nav-item"> 
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
@@ -53,14 +58,23 @@
     </div>
   </div>
 </div>
+</div>
 
 </div>
 </nav>
 
-<!-- email list -->
 <div class="row">
 
-<div class="col-md-5 col-lg-6 col-12 email-list">
+           <!-- Folders -->
+      <div class="col-2 d-none d-lg-flex flex-column"
+        <h2>Primary</h2>
+        <h2>Spam</h2>
+        <h2>Draft</h2>
+        <h2>Trash</h2>
+
+       <!-- email list -->
+       <!-- <div class="col email-list"> -->
+  <div class="col-sm-12 col-md-7 col-lg-4 border text-bg-light"></div>
     <h2>Inbox</h2>
     <div class="email">
         <span>Sender: Boss | Subject: Design update 38</span>
@@ -90,7 +104,7 @@
 
 <!-- Open Email -->
 
-<div class="col-sm-12 col-md-5 col-lg-5 border text-bg-light">
+<div class="col-sm-12 col-md-5 col-lg-4 border text-bg-light">
     <div class="mailbox">
         <div class="email-header">
             <h4 class="Message details">Sender: Boss | Subject: Design update 37</h4> 
@@ -101,11 +115,12 @@
              Hey, I think we should go back to the original design. Please reply.
              -Boss
             <div class="container">
-        <textarea class="form-control mx-auto" style="display: block; width: 100%;" rows="6" name="" id="" cols="30"></textarea>
-<!-- Buttons -->
+        <textarea class="form-control mx-auto" style="display: block; width: 100%;" rows="6" name="" id=""
+         cols="30"></textarea>
+          <!-- Buttons -->
        
             <button class="btn btn-primary compose">Attach</button>
-            <button class="btn btn-primary compose">Compose</button>
+            <button class="btn btn-primary compose">Send</button>
         </div>
  
         </p>
@@ -123,6 +138,7 @@
 <!-- Compose box -->
 
 <!-- offcanvas item -->
+<div class="d-flex justify-content-evenly flex-column flex-end">
 <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
     Compose Message
   </a>
@@ -142,8 +158,9 @@
     <textarea class="message" rows="10" placeholder="What say you..."></textarea>
     <button class="btn btn-primary compose">Attach</button>
 </div>  
+</div>
 
-<!--  -->
+      <!--  -->
       <div>
         Send message and attachments to QContacts 
       </div>
@@ -161,7 +178,7 @@
     </div>
   </div>
 
-  <!-- compose popup form -->
+    <!-- compose popup form -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
