--- a/Practice-one-email.html
+++ b/Practice-one-email.html
@@ -66,15 +66,15 @@
 <div class="row">
 
            <!-- Folders -->
-      <div class="col-2 d-none d-lg-flex flex-column"
+      <div class="col-12 col-lg-2 d-flex flex-row flex-lg-column justify-content-around menubuttons">
         <h2>Primary</h2>
         <h2>Spam</h2>
         <h2>Draft</h2>
         <h2>Trash</h2>
-
+      </div>
        <!-- email list -->
        <!-- <div class="col email-list"> -->
-  <div class="col-sm-12 col-md-7 col-lg-4 border text-bg-light"></div>
+  <div class="col-sm-12 col-md-7 col-lg-4 border text-bg-light">
     <h2>Inbox</h2>
     <div class="email">
         <span>Sender: Boss | Subject: Design update 38</span>
@@ -104,7 +104,7 @@
 
 <!-- Open Email -->
 
-<div class="col-sm-12 col-md-5 col-lg-4 border text-bg-light">
+<div class="col-sm-12 col-md-5 col-lg-6 border text-bg-light">
     <div class="mailbox">
         <div class="email-header">
             <h4 class="Message details">Sender: Boss | Subject: Design update 37</h4> 
